--- a/index.html
+++ b/index.html
@@ -90,38 +90,19 @@
             <h3>@ National Museum of Korea, Art Center Nabi and More</h3>
         </div>
     </div>
-    <div id="About" class="about container-fluid justify-content-between">
-      <div class="container-fluid d-flex justify-content-center flex-wrap">
-        <div class="card mb-3" style="margin-right: 5%; max-width: 540px;">
-          <div class="row g-0">
-            <div class="col-md-4">
-              <img src="img/liliana.jpeg" class="img-fluid rounded-start" alt="speaker-1">
-            </div>
-            <div class="col-md-8">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                <button type="button" class="btn btn-secondary btn-sm">Small button</button>
-              </div>
-            </div>
-          </div>
+    <div id="About" class="about container-fluid">
+      <div class="container-fluid">
+        <div>
+          <h1>
+            Join Us for an Inspiring Series of Cosmetic Industry Conferences!
+          </h1>
+          <br>
+          <p>
+            We are delighted to invite you to a unique event dedicated to the ever-evolving world of cosmetics. This series of conferences brings together leading professionals, researchers, and innovators in the cosmetic industry to share insights, explore trends, and discuss the future of beauty and skincare. From groundbreaking scientific research to sustainable product development, our expert speakers will cover a wide range of topics designed to inform, inspire, and connect professionals across the sector. Whether you're a scientist, entrepreneur, student, or simply passionate about cosmetics, this is an opportunity to network, learn, and grow with others who share your vision for a better, more beautiful world. Don’t miss it — the future of cosmetics starts here!
+          </p>
+          <br>
         </div>
-        <img src="img/INVIMA.jpeg" class="img-fluid" alt="INVIMA">
-      </div>
-      <div class="card mb-3" style="max-width: 540px;">
-        <div class="row g-0">
-          <div class="col-md-4">
-            <img src="img/liliana.jpeg" class="img-fluid rounded-start" alt="speaker-1">
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-            </div>
-          </div>
-        </div>
+        <div id="cards-container" class="row g-3 justify-content-center"></div>
       </div>
     </div>
     <div class="container-fluid contact" id="Contact">
@@ -129,7 +110,7 @@
       <div class="row g-2">
         <div class="col-md">
           <div class="form-floating">
-            <input type="email" class="form-control" id="floatingInputGrid" placeholder="name@example.com">
+            <input type="email" class="form-control" id="floatingInputGrid" placeholder="name@example.com" required>
             <label for="floatingInputGrid">Email address</label>
           </div>
         </div>
@@ -147,5 +128,6 @@
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
