--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           </div>
         </div>
     </nav>
-    <header class="header-desktop d-none d-md-flex" style="display: flex; flex-direction: column;">
+    <header class="header-desktop d-none d-md-flex" style="display: flex">
         <div class=""></div>
         <div class="social">
             <a href=""><img src="img/linkedin.png" alt="linkedin"></a>
@@ -49,9 +49,9 @@
             <a class="social-a" href="">My page</a>
             <a class="social-a" href="">Logout</a>
         </div>
-        <div class="d-flex align-items-center justify-content-between px-3" style="background-color: #e3f2fd">
-            <img class="w-20" src="img/Logo.jpg" style="height: 80px;" alt="Logo">
-            <ul class="nav w-60" style="justify-content: center;">
+        <div class="desktop-items d-flex align-items-center justify-content-between px-3">
+            <img class="w-20 img-logo" src="img/Logo.jpg" alt="Logo">
+            <ul class="nav w-60 ul-items">
                 <li class="nav-item">
                   <a class="nav-link" href="#About">About</a>
               </li>
@@ -82,11 +82,11 @@
             <br>
             <h1>THE COSMETIC WORLD</h1>
         </div>
-        <div style="padding-right: 25%;">
+        <div class="pr-25">
             <p>A joyful celebration beliving in the value of operations and sharing, creating a positive change with people from over 80 contries is taking place in October in Korea</p>
         </div>
         <div class="location">
-            <h2 style="font-weight: bold;">2015.10.15(THU) - 16(FRI)</h2>
+            <h2 class="fw-bold">2015.10.15(THU) - 16(FRI)</h2>
             <h3>@ National Museum of Korea, Art Center Nabi and More</h3>
         </div>
     </div>
