--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           </div>
         </div>
     </nav>
-    <header class="header-desktop d-none d-md-flex" style="display: flex">
+    <header class="header-desktop d-none d-md-flex">
         <div class=""></div>
         <div class="social">
             <a href=""><img src="img/linkedin.png" alt="linkedin"></a>
